[package]
name = "iroh-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
regex = "1.7.0"

[build-dependencies]
lalrpop = "0.19.8"
